--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:name=".FriendLocatorApplication"
         android:allowBackup="true"
@@ -20,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <service android:name=".util.IncomingMessageService"
+        <service android:name=".util.ServerService"
             android:description="@string/service_description"
             android:enabled="true"
             android:exported="false"  />
